--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
