--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
   geolocator: ^9.0.2
+  camera: ^0.10.5+1
 
 dev_dependencies:
   flutter_test:
