--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.18.1
   geolocator: ^9.0.2
   camera: ^0.10.5+1
+  google_mlkit_face_detection: ^0.6.0
 
 dev_dependencies:
   flutter_test:
