--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   shared_preferences: ^2.1.1
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
+  firebase_storage: ^11.2.2
+  firebase_messaging: ^14.6.2
+  overlay_support: ^2.1.0
   animated_text_kit: ^4.2.2
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
@@ -49,6 +52,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
