--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   intl: ^0.18.1
   geolocator: ^9.0.2
   camera: ^0.10.5+1
+  url_launcher: ^6.1.11
+  mailer: ^6.0.1
   google_mlkit_face_detection: ^0.6.0
+  slide_switcher: ^1.1.2
 
 dev_dependencies:
   flutter_test:
