--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   mailer: ^6.0.1
   google_mlkit_face_detection: ^0.6.0
   slide_switcher: ^1.1.2
+  action_slider: ^0.6.1
+  slide_action: ^0.0.2
 
 dev_dependencies:
   flutter_test:
