--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,19 @@ dependencies:
   get: ^4.6.5
   shared_preferences: ^2.1.1
   firebase_core: ^2.13.0
+  firebase_messaging: ^14.6.3
+  flutter_local_notifications: ^14.1.1
+  image_picker: ^1.0.0
   cloud_firestore: ^4.7.1
   firebase_storage: ^11.2.2
-  firebase_messaging: ^14.6.2
   overlay_support: ^2.1.0
   animated_text_kit: ^4.2.2
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
   geolocator: ^9.0.2
+  widget_circular_animator: ^1.0.0
+  easy_refresh: ^3.3.2+1
   camera: ^0.10.5+1
   url_launcher: ^6.1.11
   mailer: ^6.0.1
@@ -36,6 +40,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/icon/icon.jpg"
 
   flutter_lints: ^2.0.0
 
@@ -46,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/
   fonts:
     - family: "Poppins"
       fonts:
