--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
   geolocator: ^9.0.2
+  loading_indicator: ^3.1.1
   widget_circular_animator: ^1.0.0
   easy_refresh: ^3.3.2+1
   camera: ^0.10.5+1
