--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   overlay_support: ^2.1.0
   animated_text_kit: ^4.2.2
   flutter_svg: ^2.0.5
+  fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
   geolocator: ^9.0.2
