--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_messaging: ^14.6.3
   flutter_local_notifications: ^14.1.1
   image_picker: ^1.0.0
+  image_cropper: ^5.0.0
   cloud_firestore: ^4.7.1
   firebase_storage: ^11.2.2
   overlay_support: ^2.1.0
